@@ -76,7 +76,6 @@ import java.util.Collections;
 import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -225,7 +224,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
         loginCustomerUser();
         createAlarmAndReturnAction(TEST_ALARM_TYPE)
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionCreate + classNameAlarm + " '" + TEST_ALARM_TYPE +  "'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionCreate + classNameAlarm + " '" + TEST_ALARM_TYPE + "'!")));
     }
 
     @Test
@@ -305,7 +304,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm", alarm)
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -322,12 +321,12 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm", alarm)
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         loginDifferentCustomerAdministrator();
         doPost("/api/alarm", alarm)
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -355,7 +354,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
         loginCustomerUser();
         doDelete("/api/alarm/" + alarm.getId())
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() + "'!")));
     }
 
     @Test
@@ -382,7 +381,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doDelete("/api/alarm/" + alarm.getId())
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -398,14 +397,14 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doDelete("/api/alarm/" + alarm.getId())
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
 
         loginDifferentCustomerAdministrator();
         doDelete("/api/alarm/" + alarm.getId())
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionDelete + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -493,7 +492,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
         loginCustomerUser();
         doPost("/api/alarm/" + alarm.getId() + "/ack")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
     }
 
     @Test
@@ -525,14 +524,14 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm/" + alarm.getId() + "/clear")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
 
         loginDifferentCustomerAdministrator();
         doPost("/api/alarm/" + alarm.getId() + "/clear")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -548,7 +547,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm/" + alarm.getId() + "/clear")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -564,14 +563,14 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm/" + alarm.getId() + "/ack")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
 
         loginDifferentCustomerAdministrator();
         doPost("/api/alarm/" + alarm.getId() + "/ack")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -587,7 +586,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         doPost("/api/alarm/" + alarm.getId() + "/ack")
                 .andExpect(status().isForbidden())
-                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() +"'!")));
+                .andExpect(statusReason(containsString(msgErrorPermissionWrite + classNameAlarm + " '" + alarm.getType() + "'!")));
 
         testNotifyEntityNever(alarm.getId(), alarm);
     }
@@ -755,7 +754,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
         Assert.assertEquals(savedUser.getId(), foundAlarm.getAssigneeId());
         Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
 
-        beforeAssignmentTs = System.currentTimeMillis();
+        long afterAssignmentTs = System.currentTimeMillis();
 
         loginSysAdmin();
 
@@ -763,12 +762,12 @@ public class AlarmControllerTest extends AbstractControllerTest {
 
         loginDifferentTenant();
 
-        foundAlarm = Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS)
-                .until(() -> doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class), Objects::nonNull);
-
-        Assert.assertNotNull(foundAlarm);
-        Assert.assertNull(foundAlarm.getAssigneeId());
-        Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
+        Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS).untilAsserted(() -> {
+            AlarmInfo alarmInfo = doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class);
+            Assert.assertNotNull(alarmInfo);
+            Assert.assertNull(alarmInfo.getAssigneeId());
+            Assert.assertTrue(alarmInfo.getAssignTs() >= afterAssignmentTs);
+        });
     }
 
     @Test
@@ -802,16 +801,16 @@ public class AlarmControllerTest extends AbstractControllerTest {
         Assert.assertEquals(savedUser.getId(), foundAlarm.getAssigneeId());
         Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
 
-        beforeAssignmentTs = System.currentTimeMillis();
+        long afterAssignmentTs = System.currentTimeMillis();
 
         doDelete("/api/user/" + savedUser.getId().getId()).andExpect(status().isOk());
 
-        foundAlarm = Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS)
-                .until(() -> doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class), Objects::nonNull);
-
-        Assert.assertNotNull(foundAlarm);
-        Assert.assertNull(foundAlarm.getAssigneeId());
-        Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
+        Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS).untilAsserted(() -> {
+            AlarmInfo alarmInfo = doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class);
+            Assert.assertNotNull(alarmInfo);
+            Assert.assertNull(alarmInfo.getAssigneeId());
+            Assert.assertTrue(alarmInfo.getAssignTs() >= afterAssignmentTs);
+        });
     }
 
     @Test
@@ -855,18 +854,18 @@ public class AlarmControllerTest extends AbstractControllerTest {
         Assert.assertEquals(savedUser.getId(), foundAlarm.getAssigneeId());
         Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
 
-        beforeAssignmentTs = System.currentTimeMillis();
+        long afterAssignmentTs = System.currentTimeMillis();
 
         Mockito.reset(tbClusterService, auditLogService);
 
         doDelete("/api/customer/" + differentTenantCustomerId.getId()).andExpect(status().isOk());
 
-        foundAlarm = Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS)
-                .until(() -> doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class), Objects::nonNull);
-
-        Assert.assertNotNull(foundAlarm);
-        Assert.assertNull(foundAlarm.getAssigneeId());
-        Assert.assertTrue(foundAlarm.getAssignTs() >= beforeAssignmentTs);
+        Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS).untilAsserted(() -> {
+            AlarmInfo alarmInfo = doGet("/api/alarm/info/" + alarmId.getId(), AlarmInfo.class);
+            Assert.assertNotNull(alarmInfo);
+            Assert.assertNull(alarmInfo.getAssigneeId());
+            Assert.assertTrue(alarmInfo.getAssignTs() >= afterAssignmentTs);
+        });
     }
 
     @Test
@@ -987,7 +986,7 @@ public class AlarmControllerTest extends AbstractControllerTest {
     }
 
     @Test
-    public void testSubCustomersSubCustomerAlarmsCanBeFoundByParentCustomer() throws Exception{
+    public void testSubCustomersSubCustomerAlarmsCanBeFoundByParentCustomer() throws Exception {
         loginCustomerAdministrator();
 
         Customer subCustomer = new Customer();
@@ -1418,27 +1417,20 @@ public class AlarmControllerTest extends AbstractControllerTest {
             types.remove(0);
         }
 
-        foundTypes = doGetTyped("/api/alarm/types?pageSize=1024&page=0", new TypeReference<PageData<EntitySubtype>>() {
-        })
-                .getData()
-                .stream()
-                .map(EntitySubtype::getType)
-                .collect(Collectors.toList());
-
-        Assert.assertEquals(types.size(), foundTypes.size());
-        Assert.assertEquals(types, foundTypes);
+        Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS).untilAsserted(() -> {
+            List<String> actualTypes = doGetTyped("/api/alarm/types?pageSize=1024&page=0", new TypeReference<PageData<EntitySubtype>>() {})
+                    .getData().stream().map(EntitySubtype::getType).toList();
+            Assert.assertEquals(types.size(), actualTypes.size());
+            Assert.assertEquals(types, actualTypes);
+        });
 
         doDelete("/api/device/" + devices.get(0).getId()).andExpect(status().isOk());
 
-        foundTypes = doGetTyped("/api/alarm/types?pageSize=1024&page=0", new TypeReference<PageData<EntitySubtype>>() {
-        })
-                .getData()
-                .stream()
-                .map(EntitySubtype::getType)
-                .sorted()
-                .collect(Collectors.toList());
-
-        Assert.assertTrue(foundTypes.isEmpty());
+        Awaitility.await().atMost(TIMEOUT, TimeUnit.SECONDS).untilAsserted(() -> {
+            List<String> actualTypes = doGetTyped("/api/alarm/types?pageSize=1024&page=0", new TypeReference<PageData<EntitySubtype>>() {})
+                    .getData().stream().map(EntitySubtype::getType).sorted().toList();
+            Assert.assertTrue(actualTypes.isEmpty());
+        });
     }
 
 }
